--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 
 <body>
-
+    <main>
+        <h1>Cat Photo App</h1>
+        <h2>Cat Photos</h2>
+        <!-- TODO: Add link to cat photos -->
+        <p>See more photos in our gallery</p>
+        <img src="" alt="">
+    </main>
 </body>
 
 </html>
