--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h2>Cat Photos</h2>
         <!-- TODO: Add link to cat photos -->
         <p>See more photos in our gallery</p>
-        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="a Cat">
+        <a href="https://freecatphotoapp.com">link to cat pictures</a>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+            alt="A cute orange cat lying on its back">
     </main>
 </body>
 
