--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     alt="A cute orange cat lying on its back">
             </a>
         </section>
+        <section>
+            <h2>Cat Lists</h2>
+        </section>
     </main>
 </body>
 
